# iteris-dev

./: .gitignore  LICENSE  README.md  README.zh-CN.md  install.sh  pyproject.toml
.github/workflows/: ci.yml
docs/: build-family-guide.sh  family-closure-testing-guide.md  iteris-family-operator-guide.tex  user-guide.md
scripts/: deploy.sh
src/iteris/: __init__.py  _build_info.py  artifacts.py  bootstrap.py  cli.py  codex_logs.py  deploy.py  events.py  evolve.py  executors.py  family.py  family_pool.py  family_scaffold.py  frontier.py  generalize.py  generalize_analyze.py  gitops.py  inherit.py  liveness.py  log.py  log_adapters.py  messages.py  project.py  references.py  sessions.py  tasks.py  tmux.py
src/iteris/agents/: __init__.py  execute.py  explore.py  runtime.py  worker.py
src/iteris/commands/: agent.py  artifact.py  common.py  context.py  dashboard.py  doctor.py  evolve.py  family.py  frontier.py  generalize.py  generalize_tool.py  git.py  help.py  init.py  logs.py  memory.py  message.py  monitor.py  new.py  recover.py  report.py  run.py  session_tool.py  setup.py  task.py  theorem.py  ui.py  ui_evolve.py  ui_report.py  verification.py  version.py  workflow.py
src/iteris/data/: GUIDE_INDEX.md  OPERATOR.md
src/iteris/guide/: __init__.py  context.py  environment.py  index.py  locale.py  lookups.py  paths.py  prompt.py  welcome.py  wizard.py
src/iteris/memory/: facts.py  family.py  scratch.py  search.py
src/iteris/reporting/: core.py  (+9 more)
tests/: test_agent_cli_git.py  test_bootstrap_flow.py  test_codex_logs.py  test_codex_normalize.py  test_dashboard_install.py  test_deploy.py  test_doctor_command.py  test_evolve_profile.py  test_evolve_state.py  test_executor_dispatch.py  test_executors.py  test_family_closure.py  test_family_memory.py  test_family_state.py  test_generalize.py  test_generalize_analyze.py  test_goal_command.py  test_guide_index.py  test_guide_lookups.py  test_liveness_recover.py  test_log_adapters.py  test_message_delivery.py  test_messages.py  test_monitor_command.py  test_monitor_i18n.py  test_monitor_welcome.py  test_monitor_wizard.py  test_optimization_pass.py  test_phase0_identity.py  test_report_command.py  test_report_export.py  test_sessions_gc.py  test_supervision_engine.py  test_supervision_hardening.py  test_ui_evolve.py  test_ui_report.py  test_ui_streams.py  test_verification_agent.py  test_verification_wait.py  test_worker_drain.py
(+102 files in other folders)
