[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "iteris"
version = "0.1.0"
description = "Goal-driven research agent workspace toolkit"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "Frenzymath · PKU @ AI4Math" },
]
keywords = ["agentic-ai", "research-agents", "computational-mathematics", "codex", "claude-code"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
]
dependencies = [
    "click>=8.1",
    "typer>=0.12",
    "rich>=13",
    "requests>=2.31",
    "pdfminer.six>=20221105",
    "fastapi>=0.100",
    "pydantic>=2",
    "uvicorn>=0.23",
]

[project.optional-dependencies]
dev = [
    "build>=1.2",
    "pytest>=8",
    "twine>=5",
]

[project.urls]
Homepage = "https://github.com/frenzymath/iteris"
Source = "https://github.com/frenzymath/iteris"
Issues = "https://github.com/frenzymath/iteris/issues"
Documentation = "https://github.com/frenzymath/iteris#readme"

[project.scripts]
iteris = "iteris.cli:app"

[tool.setuptools.packages.find]
where = ["src"]
include = ["iteris*"]

[tool.setuptools.package-data]
# Ship the dashboard UI source so `iteris dashboard` can install/build it on
# first use. Keep this list scoped so dirty worktrees cannot package
# node_modules/, dist/, sourcemaps, or tsbuildinfo files.
"iteris" = [
    "ui/.gitignore",
    "ui/server/package.json",
    "ui/server/package-lock.json",
    "ui/server/tsconfig.json",
    "ui/server/src/**/*.ts",
    "ui/client/package.json",
    "ui/client/package-lock.json",
    "ui/client/tsconfig.json",
    "ui/client/vite.config.ts",
    "ui/client/index.html",
    "ui/client/src/**/*.ts",
    "ui/client/src/**/*.tsx",
    "ui/client/src/**/*.css",
]
"iteris.data" = ["*.md", "templates/*", "locales/*.json", "prompts/monitor/*/*.md"]
"iteris.reporting" = ["latex_templates/iteris-report/*.sty"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
